# EUREKA

./: .gitignore  CMakeList_Template.txt  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old  temp.c
Examples/: SH3X_Driver.c  SoilDriver.c  SoilDriver.h
Examples/PreviousIterationArduino/: TDMADataSink3.ino
Examples/SHT3XDriver/: sht3x.c  sht3x.h
Examples/espressif esp-idf v5.2.5 examples-peripherals_i2c/i2c_simple/: sdkconfig
Examples/gptimer/: CMakeLists.txt
Examples/gptimer/main/: CMakeLists.txt  gptimer_example_main.c
Examples/nopnop2002LoraDriver/: BasicRXTX.c  details.txt  ra01s.c
components/LoRa/: CMakeLists.txt  Kconfig  LoRa.c  LoRa_driver.c  LoRa_interface.c  LoRa_main.c  driver_sx1262_cad_test.c  driver_sx1262_send_receive_test.c
components/PingPong/: CMakeLists.txt  PingPong.c
components/esp8266_wrapper/: CMakeLists.txt
components/i2c/: CMakeLists.txt  I2C.c  Kconfig
components/lora/: LoRa.c
components/memory/: CMakeLists.txt  Kconfig  memory.c
components/monitor/: CMakeLists.txt  INA219.c
components/ra01s/: CMakeLists.txt  ra01s.c
components/sensors/: .CMakeLists.txt.swp  CMakeLists.txt  Kconfig  SH3X.c  SHT3X.c  Sensors.c
components/spi/: SPI.c
components/timer/: CMakeLists.txt  Kconfig  Timer.c
esp-lib/components/i2cdev/: CMakeLists.txt  i2cdev.h
esp-lib/components/ina219/: ina219.h
include/: I2C.h  I2C_ESP.h  I2C_STM.h  INA219.h  LoRa.h  LoRa_driver.h  LoRa_interface.h  LoRa_main.h  Memory.h  PingPong.h  Protocol.h  RX_Ping.h  SH3X.h  SHT3X.h  SPI.h  SPI_ESP.h  SPI_STM.h  SensorNodePins.h  Sensors.h  TX_Ping.h  Timer.h  driver_sx1262_cad_test.h  driver_sx1262_send_receive_test.h  esp8266_wrapper.h  memory.h  ra01s.h  sht3x_platform.h
main/: .Kconfig.swp  CMakeLists.txt  ClusterMain.c  ForestPathLossTest.c  JacobLoraDebug.c  Kconfig  LoRaCADTest.c  LoraLibTest.c  MonitorTest.c  NewDriverTest.c  PCNT_Test.c  PingPongTest.c  PowerTest.c  RX_Pong.c  SensorLibTest.c  SensorMain.c  TX_Ping.c  crap.c  memoryLibTest.c  src1.c
src/: CMakeLists.txt  I2C.c  I2C_ESP.c  I2C_STM.c  LoRa.c  LoRa_interface.c  SPI_STM.c  Sensors.c  SesnorMain.c
